Changelog
=========

1.2 (unreleased)
----------------

- Add collective.js.oembedall rendering option


1.1 (2012-07-10)
----------------

- Now the portlet use superconsumer instead of consumer to support every
  services supported by collective.oembed


1.0 (2012-01-13)
----------------

- Adjust with collective.oembed 1.0 api

1.0a (2012-01-02)
-----------------

- Initial release