@@ -18,13 +18,12 @@
     </dt>
 
     <dd class="portletItem odd">
-        <div tal:replace="structure view/embed" />
         <tal:corners condition="not:view/has_footer">
             <span class="portletBottomLeft"></span>
             <span class="portletBottomRight"></span>
         </tal:corners>
     </dd>
-    
+
     <dd class="portletFooter" tal:condition="view/has_footer">
         <span class="portletBottomLeft"></span>
         <span>
